[package]
name = "hello-pdf"
version = "0.1.0"
edition = "2021"
description = "an experiment on rendering pdf from html using a pool of tabs in an headless chrome"
[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
qrcode = "0.12.0"
headless_chrome = "0.6"
tera = "1.10"
pulldown-cmark = "0.9"
